# yaga

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  core.hxx  version.hxx.in
src/: CMakeLists.txt  core.cxx
test/: CMakeLists.txt  handle.cxx  init.cxx  version.cxx
